# download_paper

./: .gitignore  1  2.json  Cargo.toml  output.txt  papaer_debut_output.toml  temp.txt
other/: 2.json  proceed.txt  save.json  试卷类型.json  重复.txt
output_toml/: 2025年广东省湛江市第一中学中考三模历史试题.toml  2025年福建省厦门市双十中学中考二模历史试题.toml  2026年北京市西城区中考历史一模考前示范卷.toml  2026年安徽省亳州市利辛县中考一模历史试题.toml  浙江省杭州市之江实验中学2024-2025学年九年级下学期第一次月考科学试题.toml
src/: add_paper.py  add_paper.rs  ask_llm.rs  config.rs  download_paper.rs  logger.rs  main.rs  model.rs
src/adapters/: browser.rs  cos.rs  http.rs  js.rs  mod.rs  storage.rs
src/add_paper/: api_client.rs  config.rs  metadata.rs  mod.rs  models.rs  service.rs  upload.rs  utils.rs
src/app/: config.rs
src/bank_page_info/: address.rs  mod.rs  paper_type.rs  subject.rs
src/browser/: connection.rs  headless.rs  mod.rs  pool.rs
src/catalogue/: fetcher.rs  mod.rs  processor.rs
src/core/: models.rs  types.rs
src/domain/: meta.rs  mod.rs  model.rs  parsers.rs
src/infra/: mod.rs  rate_limit.rs  retry.rs
src/modules/: catalogue.rs  mod.rs
src/modules/ai/: llm_client.rs  mod.rs
src/modules/browser/: actions.rs  credential.rs  extractor.rs  manager.rs  mod.rs  scripts.rs
src/modules/metadata/: data_subject.rs  deter_city.rs  deter_misc.rs
src/modules/storage/: cos.rs  (+2 more)
src/paper/: checker.rs  mod.rs  processor.rs  types.rs
src/services/: catalogue.rs  mod.rs  orchestrator.rs  paper.rs  types.rs
src/tencent_cos/: cos_client.rs  mod.rs
src/utils/: logger.rs  mod.rs  text.rs
src/workflow/: mod.rs  pipeline.rs  upload_to_xueke.rs
