[package]
name = "download_paper"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.42"
hex = "0.4.3"
hmac = "0.12.1"
once_cell = "1.21.3"
chromiumoxide = { version = "0.8", features = ["tokio-runtime"] }
futures = "0.3"
reqwest = { version = "0.12.26", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha1 = "0.10.6"
tokio = { version = "1.48.0", features = ["full"] }
toml = "0.9.8"
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
uuid = { version = "1.18.1",default-features = false,features = ["v4"] }
